#89 코드 리팩토링 에러 함수화 해서 코드 줄이기 attributes 사용해서 json 형식으로 response 전달
